fix: search text overlapping clear icon

--- a/src/app/web-portal/shared/components/resources-search/resources-search.component.scss
+++ b/src/app/web-portal/shared/components/resources-search/resources-search.component.scss
@@ -18,6 +18,7 @@
   &__input {
     flex: 1;
     height: $topAppBarHeight;
+    width: 100%;
     margin: 0;
     padding: 0 calc(2 * #{$topAppBarHeight}) 0 $topAppBarHeight;
     position: relative;
